--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -67,5 +67,9 @@
     "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "undici": ">=6.21.2",
+    "brace-expansion": ">=2.0.2"
+  }
 }
