Revert "Fix security vulnerabilities-Frontend"
This reverts commit 49714222eb022617cf97b77b77ad355a9aa78dd5.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -67,9 +67,5 @@
     "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
   },
-  "private": true,
-  "overrides": {
-    "undici": ">=6.21.2",
-    "brace-expansion": ">=2.0.2"
-  }
+  "private": true
 }
